src/test/deca/context/invalid/homemade/tests/test333_type_op_binaire/test333_type_op_binaire8.deca
// test invalide de la règle 3.33


{
    boolean a = false || 0.5;
}
